--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">?2222<br />
+										<h2><a href="#">?<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/excel.jpg" alt="" /></a>
-									<p>1.Excel <br /></p>
+									<p>1.Excel and test <br /></p>
 									<ul class="actions special">
 										<li><a href="#" class="button">?</a></li>
 									</ul>
